--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 asgiref==3.5.0
 Django>=4.0.3<4.1
 Pillow==9.1.0
-psycopg2-binary==2.9.3
 sqlparse==0.4.2
-uWSGI>=2.0.20<2.1
 tzdata==2022.1
 wheel==0.37.1
+requests==2.27.1
+beautifulsoup4==4.11.1
+psycopg2-binary==2.9.3
+uWSGI>=2.0.20<2.1
+
