--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,7 @@ wheel==0.37.1
 requests==2.27.1
 beautifulsoup4==4.11.1
 psycopg2-binary==2.9.3
+whitenoise==5.3.0
+gunicorn==20.1.0
 uWSGI>=2.0.20<2.1
 
